--- a/style/layout/wnd.scss
+++ b/style/layout/wnd.scss
@@ -1,119 +1,162 @@
-@use "../common" as *;
-@use "../dialog/search";
-@use "../component/list";
-@use "status";
+@use '../common' as *;
+@use '../dialog/search';
+@use '../component/list';
+@use 'status';
 
-$wnd-base: get($bg, "base", 1);
-$wnd-bg: get($bg, "page", 1);
-$wnd-radius: get($radius, "medium");
+$wnd-base: get($bg, 'base', 1);
+$wnd-bg: get($bg, 'page', 1);
+$wnd-radius: get($radius, 'medium');
 
 //边窗动画
-$time: get($transition-duration, "base");
-$func: get($transition-function, "ease-in-out");
+$time: get($transition-duration, 'base');
+$func: get($transition-function, 'ease-in-out');
 $scale: scale(0.01);
 
 :root {
-  // 动画效果
-  --b3-width-transition: width #{$time} #{get(
-      $transition-function,
-      "ease-in-out"
-    )};
+    // 动画效果
+    --b3-width-transition: width #{$time} #{get($transition-function, 'ease-in-out')};
 }
 
-@keyframes close {
-  from {
-    opacity: 1;
-    max-height: 100%;
-  }
+@keyframes left-close {
+    from {
+        transform: translateX(0);
+    }
 
-  to {
-    opacity: 0;
-    transform: $scale;
-    max-height: 0;
-  }
+    100% {
+        transform: translateX(-100%);
+        max-height: 0;
+    }
 }
 
-@keyframes open {
-  from {
-    opacity: 0;
-    max-height: 0;
-  }
+@keyframes left-open {
+    from {
+        max-height: 0;
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
 
-  to {
-    opacity: 1;
-    max-height: 100%;
-  }
+@keyframes right-close {
+    from {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(100%);
+        max-height: 0;
+    }
+}
+
+@keyframes right-open {
+    from {
+        max-height: 0;
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
 }
 
 @mixin wnd {
-  min-height: 10% !important;
-  margin: $interval;
-  border-radius: $wnd-radius;
-  background-color: $wnd-bg;
-  border: $fn-border;
+    min-height: 10% !important;
+    margin: $interval;
+    border-radius: $wnd-radius;
+    background-color: $wnd-bg;
+    border: $fn-border;
 }
 
 //边窗
 #layouts > .fn__flex {
-  overflow: hidden;
+    overflow: hidden;
 
-  //两侧边窗
-  > .fn__flex-column:not(.layout__center) {
-    // 显示的边窗
-    > .fn__flex {
-      overflow: hidden;
-      min-height: 0px !important;
-      height: auto;
-      // transition: all $time $func 0s !important;
-      animation: open $time forwards $func;
+    //两侧边窗
+    > .fn__flex-column:not(.layout__center) {
+        // 显示的边窗
+        > .fn__flex {
+            overflow: hidden;
+            min-height: 0px !important;
+            height: auto;
+            // transition: all $time $func 0s !important;
 
-      > div[data-type="wnd"] {
-        @include wnd;
-      }
+            > div[data-type='wnd'] {
+                @include wnd;
+            }
 
-      // 隐藏的边窗
-      &.fn__none {
-        display: flex !important;
-        animation: close $time forwards $func;
-      }
-      
-      &:has(.fullscreen){
-        z-index: 2;
-      }
+            // 隐藏的边窗
+            &.fn__none {
+                display: flex !important;
+            }
+
+            &:has(.fullscreen) {
+                z-index: 2;
+            }
+        }
     }
-  }
+}
+
+.rc-left-folumn {
+    > .fn__flex {
+        animation: left-open $time forwards $func;
+        &.fn__none {
+            animation: left-close $time forwards $func;
+        }
+    }
+}
+.rc-right-folumn {
+    > .fn__flex {
+        animation: right-open $time forwards $func;
+        &.fn__none {
+            animation: right-close $time forwards $func;
+        }
+    }
 }
 
 .layout-tab-container {
-  overflow-y: hidden;
-  background-color: $wnd-bg;
+    overflow-y: hidden;
+    background-color: $wnd-bg;
 
-  // 边窗容器
-  > .fn__flex-1 {
-    overflow: hidden;
-    min-width: 0;
-
-    //.navigation && ...
+    // 边窗容器
     > .fn__flex-1 {
-      min-height: 0 !important;
-      // 列表
-      > .b3-list {
-        min-width: 200px;
-        margin: 0px 8px 4px;
-        &:last-child {
-          margin-bottom: 0;
+        overflow: hidden;
+        min-width: 0;
+
+        //.navigation && ...
+        > .fn__flex-1 {
+            min-height: 0 !important;
+            // 列表
+            > .b3-list {
+                min-width: 200px;
+                margin: 0px 8px 4px;
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
         }
-      }
     }
-  }
 }
 
 // 居中窗口
 .layout__center {
-  background-color: transparent; //$wnd-base;
+    background-color: transparent; //$wnd-base;
 
-  [data-type="wnd"] {
-    position: relative;
-    @include wnd;
-  }
+    [data-type='wnd'] {
+        position: relative;
+        @include wnd;
+    }
+}
+
+.layout--floatl {
+    top: 0px !important;
+    bottom: 0px !important;
+    &.layout--float {
+        box-shadow: none;
+        border: none;
+        top: 40px !important;
+        bottom: 40px !important;
+        [data-type='wnd'] {
+            box-shadow: get($shadow, 1);
+        }
+    }
 }
