--- a/style/protyle/block/table.scss
+++ b/style/protyle/block/table.scss
@@ -1,30 +1,31 @@
-@use "../../common" as *;
+@use '../../common' as *;
 
 @mixin table {
-  display: table;
-  width: 100%;
-  background-color: get($bg, "page", 1);
-  th,
-  td {
-    background-color: get($bg, "page", 1);
-  }
+    display: table;
+    width: 100%;
+    background-color: get($bg, 'page', 1);
+    th,
+    td {
+        white-space: nowrap;
+        background-color: get($bg, 'page', 1);
+    }
 }
 
 //表格块
 .b3-typography,
 .protyle-wysiwyg {
-  .table {
-    padding: 3px 2px;
+    .table {
+        padding: 3px 2px;
 
+        table {
+            @include table();
+        }
+
+        &[fold='1'] {
+            height: 40px !important;
+        }
+    }
     table {
-      @include table();
+        @include table();
     }
-
-    &[fold="1"] {
-      height: 40px !important;
-    }
-  }
-  table {
-    @include table();
-  }
 }
