fix: :bug: 修复emoji菜单样式
link #115

--- a/style/protyle/hint.scss
+++ b/style/protyle/hint.scss
@@ -1,79 +1,84 @@
-@use "../common" as *;
-@use "../component/menu";
-@use "../component/list";
+@use '../common' as *;
+@use '../component/menu';
+@use '../component/list';
 
 // 块引用菜单
 .protyle-hint {
-  @include menu.menu();
+    @include menu.menu();
 
-  .b3-list-item {
-    width: 100% !important;
-    @include menu.menu-li();
+    .b3-list-item {
+        width: 100% !important;
+        @include menu.menu-li();
 
-    &--two {
-      height: auto;
-    }
-
-    // 命名、别名、备注
-    &__showall {
-      @include v-center(list.$text-h);
-      &:first-child {
-        color: get($text, "primary");
-      }
-      &:last-child {
-        // padding-left: $interval;
-        margin: 0 !important;
-      }
-    }
-
-    &__hinticon {
-      @include svg(list.$text-h, 11px);
-      margin-right: $interval;
-    }
-
-    &--focus {
-      .b3-list-item {
-        &__showall:first-child,
-        &__hinticon {
-          @include color("focus");
+        &--two {
+            height: auto;
         }
-      }
-      .b3-menu__accelerator {
-        @include list.meta-focus();
-      }
+
+        // 命名、别名、备注
+        &__showall {
+            @include v-center(list.$text-h);
+            &:first-child {
+                color: get($text, 'primary');
+            }
+            &:last-child {
+                // padding-left: $interval;
+                margin: 0 !important;
+            }
+        }
+
+        &__hinticon {
+            @include svg(list.$text-h, 11px);
+            margin-right: $interval;
+        }
+
+        &--focus {
+            .b3-list-item {
+                &__showall:first-child,
+                &__hinticon {
+                    @include color('focus');
+                }
+            }
+            .b3-menu__accelerator {
+                @include list.meta-focus();
+            }
+        }
     }
-  }
 
-  > div[style*="flex"] {
-    margin-top: menu.$padding;
-  }
-
-  > .emojis {
-    max-height: 360px;
-  }
-
-  //快捷命令菜单
-  &.hint--menu {
-    columns: 170px 4;
-    column-gap: menu.$padding * 2;
-    column-rule: $fn-border;
-    max-height: none !important;
-    width: auto !important;
-    min-width: 730px;
+    > div[style*='flex'] {
+        margin-top: menu.$padding;
+    }
 
     > .emojis {
-      column-span: all;
-      width: 360px;
+        max-height: 360px;
     }
-    .b3-color__square {
-      @include menu.color-square(list.$text-h, 16px, 11px);
-    }
-  }
 
-  // 菜单输入框
-  .b3-text-field {
-    width: 100%;
-    margin: 0 !important;
-    background-color: get($bg, "pop", 2);
-  }
+    //快捷命令菜单
+    &.hint--menu {
+        columns: 170px 4;
+        column-gap: menu.$padding * 2;
+        column-rule: $fn-border;
+        max-height: none !important;
+        width: auto !important;
+        min-width: 730px;
+
+        &:has(> .emojis) {
+            min-width: 372px;
+            width: 372px !important;
+        }
+
+        > .emojis {
+            column-span: all;
+            width: 360px;
+        }
+        .b3-color__square {
+            @include menu.color-square(list.$text-h, 16px, 11px);
+        }
+    }
+
+    // 菜单输入框
+    .b3-text-field {
+        width: 100%;
+        margin: 0 !important;
+        background-color: get($bg, 'pop', 2);
+    }
 }
