--- a/style/dialog/bazaar.scss
+++ b/style/dialog/bazaar.scss
@@ -11,7 +11,7 @@
   }
 }
 
-.b3-tab-container[data-name="bazaar"] {
+.config__tab-container[data-name="bazaar"] {
   //集市tab
   .layout-tab-bar {
     padding: 16px 16px 8px;
