--- a/style/dialog/big.scss
+++ b/style/dialog/big.scss
@@ -1,104 +1,104 @@
-@use "../common" as *;
-@use "../component/list";
+@use '../common' as *;
+@use '../component/list';
 
 //弹窗蒙版
-$dialog-scrim: get($mask, "active");
+$dialog-scrim: get($mask, 'active');
 //弹窗边框弧度
-$dialog-radius: get($radius, "exlarge");
+$dialog-radius: get($radius, 'exlarge');
 
 $large-width: 66vw;
 
 $search-h: 42px;
 
 :root {
-  /* 遮罩 */
-  --b3-mask-background: #{$dialog-scrim};
+    /* 遮罩 */
+    --b3-mask-background: #{$dialog-scrim};
 }
 
 //弹窗
 //蒙版
 .b3-dialog__scrim {
-  -webkit-app-region: no-drag;
-  background-color: $dialog-scrim;
+    -webkit-app-region: no-drag;
+    background-color: $dialog-scrim;
 }
 
 //大弹窗
 .b3-dialog__container {
-  box-shadow: get($shadow, 3);
-  border-radius: $dialog-radius;
-  background-color: get($bg, "page", 1);
+    box-shadow: get($shadow, 3);
+    border-radius: $dialog-radius;
+    background-color: get($bg, 'page', 1);
 
-  &[style*="80vw"],
-  &[style*="90vw"] {
-    width: $large-width !important;
+    &[style*='80vw'],
+    &[style*='90vw'] {
+        width: $large-width !important;
 
-    // 弹窗关闭按钮
-    .b3-dialog__close {
-      display: none;
-    }
-
-    .b3-dialog__header {
-      border-color: get($border, 3);
-    }
-
-    // 顶部搜索框
-    .search__header {
-      width: $large-width;
-      border-color: get($border, 3);
-      border-radius: $dialog-radius $dialog-radius 0 0;
-      .b3-text-field {
-        border-radius: $dialog-radius $dialog-radius 0 0;
-      }
-    }
-  }
-  
-  // 笔记本设置界面
-  &:has(#dailyNoteSavePath) {
-    width: 45vw !important;
-  }
-
-  .config__panel {
-    // 设置菜单高度
-    $h: min(66.1vh, (list.$text-h + 16px * 2 + $fn-space) * 11 - $fn-space);
-
-    // 侧边导航栏
-    .b3-tab-bar {
-      margin: $fn-space 0;
-      padding: 0 $fn-space !important;
-      // border-right: $fn-border;
-      width: 160px !important;
-      height: $h !important;
-      // 导航按钮
-      .b3-list-item--big {
-        padding: 16px 24px !important;
-        margin-bottom: $fn-space !important;
-
-        &:last-child {
-          margin-bottom: 0px !important;
+        // 弹窗关闭按钮
+        .b3-dialog__close {
+            display: none;
         }
 
-        // 导航图标
-        .b3-list-item__graphic {
-          @include svg(20px, 12px);
-          margin-right: 18px;
+        .b3-dialog__header {
+            border-color: get($border, 3);
         }
-      }
+
+        // 顶部搜索框
+        .search__header {
+            width: $large-width;
+            border-color: get($border, 3);
+            border-radius: $dialog-radius $dialog-radius 0 0;
+            .b3-text-field {
+                border-radius: $dialog-radius $dialog-radius 0 0;
+            }
+        }
     }
 
-    // 设置项界面
-    .b3-tab-container {
-      overflow: overlay;
-      height: $h !important;
+    // 笔记本设置界面
+    &:has(#dailyNoteSavePath) {
+        width: 45vw !important;
     }
 
-    //label
-    .b3-label {
-      // 搜索筛选设置
-      .config-query {
-        label {
-          margin-top: 8px;
+    .config__panel {
+        // 设置菜单高度
+        $h: min(66.1vh, (list.$text-h + 16px * 2 + $fn-space) * 11 - $fn-space);
+
+        // 侧边导航栏
+        .b3-tab-bar {
+            margin: $fn-space 0;
+            padding: 0 $fn-space !important;
+            // border-right: $fn-border;
+            width: 160px !important;
+            height: $h !important;
+            // 导航按钮
+            .b3-list-item--big {
+                padding: 16px 24px !important;
+                margin-bottom: $fn-space !important;
+
+                &:last-child {
+                    margin-bottom: 0px !important;
+                }
+
+                // 导航图标
+                .b3-list-item__graphic {
+                    @include svg(20px, 12px);
+                    margin-right: 18px;
+                }
+            }
         }
-      }
+
+        // 设置项界面
+        .config__tab-container {
+            overflow: overlay;
+            height: $h !important;
+        }
+
+        //label
+        .b3-label {
+            // 搜索筛选设置
+            .config-query {
+                label {
+                    margin-top: 8px;
+                }
+            }
+        }
     }
-  }
 }
