fix: :bug: 优化日历挂件样式

--- a/style/base/typography.scss
+++ b/style/base/typography.scss
@@ -1,18 +1,16 @@
-@use "../common" as *;
+@use '../common' as *;
 
 :root {
-  // 字体
-  --b3-font-family: "quote", ui-sans-serif, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", "Noto Sans SC", "Microsoft Yahei", "JetBrains Mono", Helvetica,
-    Arial, "Helvetica Neue", "Luxi Sans", "DejaVu Sans", "Hiragino Sans GB",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji",
-    "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
-  --b3-font-family-code: "JetBrainsMono-Regular", "Noto Sans SC", mononoki,
-    Consolas, "Liberation Mono", Menlo, Courier, monospace, "Apple Color Emoji",
-    "Segoe UI Emoji", "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
-    "EmojiSymbols";
-  --b3-font-family-graph: mononoki;
-  --b3-font-family-emoji: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI",
-    "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji", "Android Emoji";
-  --b3-font-family-math: KaTeX_Math;
+    // 字体
+    --b3-font-family: 'quote', ui-sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        'Noto Sans SC', 'Microsoft Yahei', 'JetBrains Mono', Helvetica, Arial, 'Helvetica Neue',
+        'Luxi Sans', 'DejaVu Sans', 'Hiragino Sans GB', sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Noto Color Emoji', 'Segoe UI Symbol', 'Android Emoji', 'EmojiSymbols';
+    --b3-font-family-code: 'JetBrainsMono-Regular', 'Noto Sans SC', mononoki, Consolas,
+        'Liberation Mono', Menlo, Courier, monospace, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Noto Color Emoji', 'Segoe UI Symbol', 'Android Emoji', 'EmojiSymbols';
+    --b3-font-family-graph: mononoki;
+    --b3-font-family-emoji: 'Segoe UI Emoji', 'Segoe UI Symbol', 'Segoe UI', 'Apple Color Emoji',
+        'Twemoji Mozilla', 'Noto Color Emoji', 'Android Emoji';
+    --b3-font-family-math: KaTeX_Math;
 }
