--- a/style/layout/dock.scss
+++ b/style/layout/dock.scss
@@ -31,8 +31,13 @@ $dock-w: $item-w + $interval * 2;
             transition: transform get($transition-duration, 'base')
                 get($transition-function, 'ease-in-out');
         }
-        &--pin[aria-label="取消钉住"] svg {
-            transform: rotate(-45deg);
+        &--pin {
+            &[aria-label='钉住'] svg {
+                transform: rotate(45deg);
+            }
+            &[aria-label='取消钉住'] svg {
+                transform: rotate(0deg);
+            }
         }
     }
 }
